添加分页功能，修复几个BUG
