# api/docs/swagger.json
@@ -15,6 +15,7 @@
         },
         "version": "1.0"
     },
+    "host": "localhost:8090",
     "paths": {
         "/clouds/build": {
             "post": {
@@ -456,6 +457,29 @@
                     "menus"
                 ],
                 "summary": "List menus",
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "description": "menu_type 1: 菜单,2： 按钮, 3：API,可填写多个； 默认为： 1,2,3",
+                        "name": "menu_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -470,7 +494,7 @@
                                         "result": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.Menu"
+                                                "$ref": "#/definitions/model.PageMenu"
                                             }
                                         }
                                     }
@@ -564,7 +588,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.MenusReq"
+                            "$ref": "#/definitions/types.UpdateMenusReq"
                         }
                     }
                 ],
@@ -621,6 +645,53 @@
                 }
             }
         },
+        "/menus/{id}/status/{status}": {
+            "put": {
+                "description": "Update a menu status by menu id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menus"
+                ],
+                "summary": "Update a menu status by menu id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "menu ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "status ",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/roles": {
             "get": {
                 "description": "list roles",
@@ -634,6 +705,20 @@
                     "roles"
                 ],
                 "summary": "list roles",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -646,7 +731,7 @@
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/model.Role"
+                                            "$ref": "#/definitions/model.PageRole"
                                         }
                                     }
                                 }
@@ -716,7 +801,6 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "format": "int64",
                         "description": "role ID",
                         "name": "id",
                         "in": "path",
@@ -765,7 +849,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.RoleReq"
+                            "$ref": "#/definitions/types.UpdateRoleReq"
                         }
                     }
                 ],
@@ -931,6 +1015,53 @@
                 }
             }
         },
+        "/roles/{id}/status/{status}": {
+            "put": {
+                "description": "Update role status by role id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "roles"
+                ],
+                "summary": "Update role status by role id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "menu ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "status ",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "List user info",
@@ -944,6 +1075,20 @@
                     "users"
                 ],
                 "summary": "List user info",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -956,7 +1101,7 @@
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/types.User"
+                                            "$ref": "#/definitions/model.PageUser"
                                         }
                                     }
                                 }
@@ -1038,6 +1183,53 @@
                         "schema": {
                             "$ref": "#/definitions/types.User"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/:id/status/:status": {
+            "put": {
+                "description": "Update  user status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update  user status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "user ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "status",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1153,16 +1345,6 @@
                     "users"
                 ],
                 "summary": "Get buttons by menus id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "format": "int64",
-                        "description": "menus ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1177,7 +1359,7 @@
                                         "result": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.Menu"
+                                                "type": "string"
                                             }
                                         }
                                     }
@@ -1244,7 +1426,7 @@
                     }
                 }
             },
-            "post": {
+            "put": {
                 "description": "Change user password",
                 "consumes": [
                     "application/json"
@@ -1478,6 +1660,10 @@
                         "$ref": "#/definitions/model.Menu"
                     }
                 },
+                "code": {
+                    "description": "前端鉴权code 例： user:role:add, user:role:delete",
+                    "type": "string"
+                },
                 "gmt_create": {
                     "type": "string"
                 },
@@ -1528,6 +1714,48 @@
                 }
             }
         },
+        "model.PageMenu": {
+            "type": "object",
+            "properties": {
+                "menus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Menu"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.PageRole": {
+            "type": "object",
+            "properties": {
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Role"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.PageUser": {
+            "type": "object",
+            "properties": {
+                "total": {
+                    "type": "integer"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.User"
+                    }
+                }
+            }
+        },
         "model.Role": {
             "type": "object",
             "properties": {
@@ -1567,6 +1795,41 @@
                 },
                 "status": {
                     "description": "0 表示禁用，1 表示启用",
+                    "type": "integer"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "extension": {
+                    "type": "string"
+                },
+                "gmt_create": {
+                    "type": "string"
+                },
+                "gmt_modified": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "resource_version": {
+                    "type": "integer"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "integer"
                 }
             }
@@ -1688,6 +1951,10 @@
         "types.MenusReq": {
             "type": "object",
             "properties": {
+                "code": {
+                    "description": "前端鉴权code 例： user:role:add, user:role:delete",
+                    "type": "string"
+                },
                 "icon": {
                     "description": "icon",
                     "type": "string"
@@ -1793,6 +2060,82 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "types.UpdateMenusReq": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "前端鉴权code 例： user:role:add, user:role:delete",
+                    "type": "string"
+                },
+                "icon": {
+                    "description": "icon",
+                    "type": "string"
+                },
+                "memo": {
+                    "description": "备注",
+                    "type": "string"
+                },
+                "menu_type": {
+                    "description": "菜单类型 1 左侧菜单,2 按钮, 3 非展示权限",
+                    "type": "integer"
+                },
+                "method": {
+                    "description": "操作类型 none/GET/POST/PUT/DELETE",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "菜单名称",
+                    "type": "string"
+                },
+                "parent_id": {
+                    "description": "父级ID",
+                    "type": "integer"
+                },
+                "resource_version": {
+                    "type": "integer"
+                },
+                "sequence": {
+                    "description": "排序值",
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "状态(1:启用 2:不启用)",
+                    "type": "integer"
+                },
+                "url": {
+                    "description": "菜单URL",
+                    "type": "string"
+                }
+            }
+        },
+        "types.UpdateRoleReq": {
+            "type": "object",
+            "properties": {
+                "memo": {
+                    "description": "备注",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "名称",
+                    "type": "string"
+                },
+                "parent_id": {
+                    "description": "父级ID",
+                    "type": "integer"
+                },
+                "resource_version": {
+                    "type": "integer"
+                },
+                "sequence": {
+                    "description": "排序值",
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "0 表示禁用，1 表示启用",
+                    "type": "integer"
                 }
             }
         },
